# tableague

./: .gitignore  LICENSE  README.md  pyproject.toml
performance_scripts/: Readme.md  generate_fake_game_data.py
tableague/: __init__.py  main.py  models.py  scoring_engine.py
tableague/docs/: assumptions.txt
tests/: test_main.py
tests/fixtures/: test_invalid_input.txt
