[tool.poetry]
name = "tableague"
version = "0.1.0"
description = ""
authors = ["nlauchande <nlauchande@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tableague = "tableague.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
